--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
+language: generic
 sudo: required
 services:
   - docker
 env:
   global:
+    - IMAGE_NAME=consensysbounties/celery-playground
     - COMMIT_SHA=$(git rev-parse HEAD)
-before_install:
+script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build . -t consensysbounties/celery-playground:latest
-  - docker build . -t consensysbounties/celery-playground:$COMMIT_SHA
-  - docker push consensysbounties/celery-playground:latest
-  - docker push consensysbounties/celery-playground:$COMMIT_SHA
+  - docker build . -t "$IMAGE_NAME"
+before_deploy:
+  - docker tag "$IMAGE_NAME" "$IMAGE_NAME:$COMMIT_SHA"
+deploy:
+  provider: script
+  script: docker push "$IMAGE_NAME" && docker push "$IMAGE_NAME:$COMMIT_SHA"
+  on:
+    branch: master
