--- a/kubernetes/server-deployment.yaml
+++ b/kubernetes/server-deployment.yaml
@@ -14,6 +14,12 @@ spec:
     spec:
       containers:
         - name: server
-          image: consensysbounties/celery-playground 
+          image: consensysbounties/celery-playground
+          command: ["bash", "-c", "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"]
           ports:
             - containerPort: 8000
+          env:
+          - name: REDIS_HOST
+            value: "redis-cluster-ip-service"
+          - name: REDIS_PORT
+            value: "6379"
