--- a/kubernetes/worker-deployment.yaml
+++ b/kubernetes/worker-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: worker
           image: consensysbounties/celery-playground
+          command: ["celery", "-E", "-A", "celery_playground", "worker", "-l", "info"]
           env:
           - name: REDIS_HOST
             value: "redis-cluster-ip-service"
