--- a/helm/requirements.yaml
+++ b/helm/requirements.yaml
@@ -20,3 +20,8 @@ dependencies:
     repository: file://local-charts/flower
     tags:
     - dashboard
+  - name: scheduler
+    version: 0.1.0
+    repository: file://local-charts/scheduler
+    tags:
+    - scheduler
